src/test/ui/proc-macro/macro-rules-derive.stderr
error[E0412]: cannot find type `MissingType` in this scope
  --> $DIR/macro-rules-derive.rs:9:9
   |
LL |         #[first]
   |         ^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
